--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Psicóloga y Psicopedagoga Infantil – TEA y TDAH">
     <meta property="og:description"
-        content="Acompañamiento especializado en TEA, TDAH y desarrollo infantil. Sesiones presenciales y online.">
+        content="Acompañamiento especializado y personalizado en TEA, TDAH y desarrollo infanto-juvenil. Sesiones presenciales y online.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="URL-de-la-imagen-del-hero-o-logo">
     <meta property="og:url" content="URL-del-sitio">
 
-    <meta name="description"
-        content="Psicóloga infantil. Terapia, acompañamiento emocional y orientación familiar. Sesiones presenciales y online.">
+    <meta name="description" content="Psicóloga infantil. Terapia, acompañamiento emocional, ABA,  y orientación familiar y personalizada. Sesiones presenciales y online.">
     <meta name="keywords"
-        content="psicóloga, psicopedagogía, Psicopedagoga, TEA, TDAH, terapia infantil, trastorno del espectro autista, atención a niños, apoyo educativo, intervención temprana, psicología infantil">
+        content="psicóloga, psicopedagogía, Psicopedagoga, TEA, TDAH, terapia infanto-juvenil, trastorno del espectro autista, atención a niños, apoyo educativo, intervención temprana, psicología infantil">
 
     <!--!Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
