chore: actualizar metadatos y descripción del sitio

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <meta name="author" content="Vanessa">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Psicóloga y Psicopedagoga Infantil – TEA y TDAH">
+    <meta property="og:title" content="Psicóloga y Psicopedagoga Infanto-juvenil – TEA y TDAH">
     <meta property="og:description"
-        content="Acompañamiento especializado y personalizado en TEA, TDAH y desarrollo infanto-juvenil. Sesiones presenciales y online.">
+        content="Acompañamiento especializado, personalizado y orientación familiar en TEA, TDAH y desarrollo infanto-juvenil. Sesiones presenciales y online.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="URL-de-la-imagen-del-hero-o-logo">
     <meta property="og:url" content="URL-del-sitio">
 
-    <meta name="description" content="Psicóloga infantil. Terapia, acompañamiento emocional, ABA,  y orientación familiar y personalizada. Sesiones presenciales y online.">
+    <meta name="description" content="Psicóloga infantil. Terapia, acompañamiento emocional, ABA, y orientación familiar y personalizada. Sesiones presenciales y online.">
     <meta name="keywords"
         content="psicóloga, psicopedagogía, Psicopedagoga, TEA, TDAH, terapia infanto-juvenil, trastorno del espectro autista, atención a niños, apoyo educativo, intervención temprana, psicología infantil">
 
