feat: estructura 100% responsive y footer pendiente de ajuste en pantallas grandes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta property="og:image" content="URL-de-la-imagen-del-hero-o-logo">
     <meta property="og:url" content="URL-del-sitio">
 
-    <meta name="description" content="Psicóloga infantil. Terapia, acompañamiento emocional, ABA, y orientación familiar y personalizada. Sesiones presenciales y online.">
+    <meta name="description"
+        content="Psicóloga infantil. Terapia, acompañamiento emocional, ABA, y orientación familiar y personalizada. Sesiones presenciales y online.">
     <meta name="keywords"
         content="psicóloga, psicopedagogía, Psicopedagoga, TEA, TDAH, terapia infanto-juvenil, trastorno del espectro autista, atención a niños, apoyo educativo, intervención temprana, psicología infantil">
 
@@ -51,16 +52,16 @@
                 </div>
 
                 <ul id="listMenu" class="menuList ocultoMenu" role="menu">
-                    <li class="contLi">
+                    <li class="contLi xxl-none">
                         <img src="media/img/logo1.1.png" alt="Logo de Vanessa">
                         <button id="btnCerrar" aria-label="Cerrar menú"><i class="bi bi-x-lg"></i></button>
                     </li>
 
                     <li><a class="linkNav" href="#inicio" role="menuitem">Inicio</a></li>
-                    <li><a class="linkNav" href="#aboutMe" role="menuitem">Sobre mi</a></li>
+                    <li><a class="linkNav" href="#aboutMe" role="menuitem">Sobre mí</a></li>
                     <li><a class="linkNav" href="#miLabor" role="menuitem">Mi labor</a></li>
                     <li><a class="linkNav" href="#contacto" role="menuitem">Escríbeme</a></li>
-                    <li><a class="linkNav" href="#" role="menuitem">Reserva tú cita</a></li>
+                    <li><a class="linkNav" href="#" role="menuitem">Reserva tu cita</a></li>
                 </ul>
             </div>
         </nav>
@@ -90,8 +91,11 @@
                 <div class="cont-text">
                     <img src="media/img/vanessa2.jpg" alt="Foto">
                     <h3>Vanessa A. Medina Valdez</h3>
-                    <p>Soy psicóloga especializada en Dificultades del Aprendizaje y Trastornos del Neurodesarrollo.</p>
-                    <p>Educadora Infantil formada en la Universidad de Barcelona.</p>
+                    <p>Psicóloga especializada en Dificultades del Aprendizaje y Trastornos del Neurodesarrollo, formada
+                        en la Universidad de Barcelona.</p>
+                    <p>Cuento con más de 5 años de experiencia aplicando principios ABA, especialmente en la
+                        intervención con niños y adolescentes con TEA, TDAH y dificultades como la dislexia.</p>
+
                 </div>
             </div>
         </section>
@@ -99,63 +103,81 @@
         <!--!Evaluación del desarrollo infantil-->
         <section id="miLabor">
             <h2 class="styleH2">¿Cómo te ayudamos?</h2>
+            <div class="grid-cont">
+                <!--!MI LABOR-->
+                <article>
+                    <div class="card1">
+                        <div class="img-wrapper">
+                            <img src="media/img/img-card1.jpg" alt="Valoración Inicial">
+                        </div>
+                        <div class="card-text">
+                            <h4>Evaluación del desarrollo infanto-juvenil</h4>
+                            <p>Realizo una valoración inicial e integral para detectar de forma temprana los primeros
+                                signos
+                                de
+                                autismo. Mi objetivo es entender a cada niño y adolescente en profundidad y ofrecer a
+                                las
+                                familias una
+                                orientación clara desde el primer momento.</p>
 
-            <!--!MI LABOR-->
-            <article>
-                <div class="card1">
-                    <img src="media/img/img-card1.jpg" alt="Valoración Inicial">
-                    <div class="card-text">
-                        <h4>Evaluación del desarrollo infantil</h4>
-                        <p>Realizo una valoración inicial e integral para detectar de forma temprana los primeros signos
-                            de
-                            autismo. Mi objetivo es entender a cada niño en profundidad y ofrecer a las familias una
-                            orientación clara desde el primer momento.</p>
-
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <!--!Comunicación y conducta-->
-            <article>
-                <div class="card1">
-                    <img src="media/img/img-card2.jpg" alt="Comunicación y conducta">
-                    <div class="card-text">
-                        <h4>Comunicación y conducta</h4>
-                        <p>Trabajo la conducta verbal y aplico estrategias basadas en el Análisis de Conducta Aplicada
-                            (ABA)
-                            para favorecer el desarrollo comunicativo y conductual de cada niño. Mi objetivo es que cada
-                            niño avance con seguridad, autonomía y herramientas que pueda aplicar en su día a día .</p>
+                <!--!Comunicación y conducta-->
+                <article>
+                    <div class="card1">
+                        <div class="img-wrapper">
+                            <img src="media/img/img-card2.jpg" alt="Comunicación y conducta">
+                        </div>
+                        <div class="card-text">
+                            <h4>Comunicación y conducta</h4>
+                            <p>Enseñamos a niños, niñas y adolescentes utilizando procedimientos basados en el Análisis
+                                de
+                                Conducta Aplicado (ABA), favoreciendo su desarrollo comunicativo y conductual. Mi
+                                objetivo
+                                es que cada menor avance con seguridad, autonomía y herramientas.</p>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <!--!Desarrollo social y crecimiento personal-->
-            <article>
-                <div class="card1">
-                    <img src="media/img/img-card3.jpg" alt="Desarrollo social">
-                    <div class="card-text">
-                        <h4>Desarrollo social y crecimiento personal</h4>
-                        <p>Acompaño el desarrollo de las habilidades sociales y la autonomía personal para que cada niño
-                            pueda desenvolverse con seguridad y adaptarse a distintos entornos. Refuerzo estas
-                            capacidades
-                            de forma práctica para que el niño gane seguridad y pueda relacionarse mejor en su entorno.
-                        </p>
+                <!--!Desarrollo social y crecimiento personal-->
+                <article>
+                    <div class="card1">
+                        <div class="img-wrapper">
+                            <img src="media/img/img-card3.jpg" alt="Desarrollo social">
+                        </div>
+                        <div class="card-text">
+                            <h4>Desarrollo socioemocional</h4>
+                            <p>Acompaño el desarrollo de las habilidades sociales, la gestión emocional y la autonomía
+                                personal para que cada niño y adolescente pueda desenvolverse con seguridad y adaptarse
+                                a
+                                distintos entornos. Refuerzo estas capacidades de forma práctica para que ganen
+                                seguridad y
+                                puedan relacionarse mejor en su día a día.
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <!--!Movimiento y desarrollo-->
-            <article>
-                <div class="card1">
-                    <img src="media/img/img-card4.jpg" alt="Valoración Inicial">
-                    <div class="card-text">
-                        <h4>Movimiento y desarrollo</h4>
-                        <p>A través de la psicomotricidad trabajo el movimiento, el juego y la expresión corporal para
-                            favorecer el desarrollo global del niño. Este enfoque ayuda a mejorar la coordinación, la
-                            atención y la seguridad en sí mismos a través de experiencias corporales significativas.</p>
+                <!--!Movimiento y desarrollo-->
+                <article>
+                    <div class="card1">
+                        <div class="img-wrapper">
+                            <img src="media/img/img-card4.jpg" alt="Valoración Inicial">
+                        </div>
+                        <div class="card-text">
+                            <h4>Psicomotricidad</h4>
+                            <p>A través de la Psicomotricidad trabajo el movimiento, el juego y la expresión corporal
+                                para
+                                favorecer el desarrollo global del niño y adolescente. Este enfoque ayuda a mejorar la
+                                coordinación, la
+                                atención y la seguridad en sí mismos a través de experiencias corporales significativas.
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
         </section>
 
         <section id="contacto">
@@ -186,10 +208,29 @@
 
     <footer>
         <div class="cont-footer">
-            <p>© 2025 Vanessa.com </p>
-            <p>Todos los derechos reservados</p>
-            <p><a href="#">Aviso Legal</a></p>
 
+            <div class="title-body">
+                <img src="media/img/logo-footer.png" alt="Logo Footer">
+            </div>
+
+            <div class="body-contacto">
+                <h5>Escríbeme</h5>
+                <p><a href="mailto:correo@electronico.com">correo@electronico.com</a></p>
+                <p><a href="tel:+3499999999">+34 9999999</a></p>
+            </div>
+
+
+            <div class="body-politica">
+                <h5>Legal</h5>
+                <p><a href="#">Política de privacidad</a></p>
+                <p><a href="#">Aviso Legal</a></p>
+            </div>
+
+
+            <div class="foot-footer">
+                <p>© 2025 Vanessa – Todos los derechos reservados</p>
+
+            </div>
         </div>
     </footer>
 
