feat: pulir footer en todos los breakpoints

--- a/index.html
+++ b/index.html
@@ -212,20 +212,20 @@
             <div class="title-body">
                 <img src="media/img/logo-footer.png" alt="Logo Footer">
             </div>
+            <div class="foot-xxl">
+                <div class="body-contacto">
+                    <h5>Escríbeme</h5>
+                    <p><a href="mailto:correo@electronico.com">correo@electronico.com</a></p>
+                    <p><a href="tel:+3499999999">+34 9999999</a></p>
+                </div>
 
-            <div class="body-contacto">
-                <h5>Escríbeme</h5>
-                <p><a href="mailto:correo@electronico.com">correo@electronico.com</a></p>
-                <p><a href="tel:+3499999999">+34 9999999</a></p>
+
+                <div class="body-politica">
+                    <h5>Legal</h5>
+                    <p><a href="#">Política de privacidad</a></p>
+                    <p><a href="#">Aviso Legal</a></p>
+                </div>
             </div>
-
-
-            <div class="body-politica">
-                <h5>Legal</h5>
-                <p><a href="#">Política de privacidad</a></p>
-                <p><a href="#">Aviso Legal</a></p>
-            </div>
-
 
             <div class="foot-footer">
                 <p>© 2025 Vanessa – Todos los derechos reservados</p>
